<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NXT Controller Plus</string>
    <string name="connectNXT">Connect</string>
    <string name="disconnectNXT">Disconnect</string>
    <string name="closeLabel">Close</string>
    <string name="scanLabel">Click to scan</string>
    <string name="pairedDevicesLabel">Paired NXT devices:</string>
    <string name="newFoundedDevicesLabel"> NXT found</string>
    <string name="scanCompleteLabel">Scanning finished</string>
    <string name="ledONLabel">LED:ON</string>
    <string name="ledOFFLabel">LED:OFF</string>
    <string name="scanningLabel">Scanning</string>
    <string name="noSensorLabel">No sensor</string>
    <string name="azimuthText">Azimuth:</string>
    <string name="distanceText">Current distance:</string>
    <string name="angleText">Current angle:</string>
    <string name="noFoundedDevicesLabel">No new NXT devices</string>
    <string name="selectDevice">Select NXT device</string>
    <string-array name="errorsMsg">
        <item >BlueTooth not found on this device. You cannot use this program without BlueTooth. You can now close this application.</item>
        <item >BlueTooh cannot be activated. Try again or activate it manually.</item>
        <item >Cannot connect to your NXT robot.Try again or restart your NXT robot. </item>  
        <item >BlueTooth is not activated</item> 
    </string-array>
    <string-array name="infoMsg">
        <item >BlueTooth successfully activated. Now you can connect your NXT robot by clicking on the "Connect NXT"</item>
        <item >Please check if your NXT device is turned on or is it in range.</item>  
        <item >Connection Lost try reconnecting</item>
        <item >Setting saved. Please connect your NXT again.</item>    
        <item >Setting has not been changed.</item>   
    </string-array>
    <string-array name="connectionStatues">
        <item >Disconnected</item>
        <item >Connected to:</item>
        <item >Connecting to:</item>
        <item >Connection Failed</item>
        <item >Connection Lost</item>
    </string-array> 
    <string-array name="controlModes">
      <item>Touch Mode</item>
      <item>Tilt Mode</item>
      <item>Follower Mode</item> 
    </string-array>
    <string-array name="motorNames">
      <item>Motor A</item>
      <item>Motor B</item>
      <item>Motor C</item>
    </string-array>
	<string name="selectLeftMotor">Select Left Motor:</string>
	<string name="selectRightMotor">Select Right Motor:</string>
	<string name="selectPortOne">Select Sensor at Port 1:</string>
	<string name="selectPortTwo">Select Sensor at Port 2:</string>
	<string name="selectPortThird">Select Sensor at Port 3:</string>
	<string name="selectPortFourth">Select Sensor at Port 4:</string>
	<string name="saveButtonText">Save</string>
	<string name="settingsText">Settings</string>
    <string-array name="sensorNames">
      <item>Touch Sensor</item>
      <item>Light Sensor</item>
      <item>Sound Sensor</item>
      <item>Ultrasonic Sensor</item>
      <item>Compass Sensor</item> 
      <item>No Sensor</item> 
    </string-array>
    <color name="textBlack">#000</color>
    <color name="deepBlue">#00008b</color>
    <color name="bgColor">#808080</color>
    <string name="batteryLevel">Battery:</string>
    <color name="white">#fff</color>
</resources>