<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/settingsChild"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="horizontal|vertical" >

        <TextView
            android:id="@+id/motorLeftLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectLeftMotor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/motorLeftSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/motorNames" />

        <TextView
            android:id="@+id/motorRightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectRightMotor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/motorRightSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/motorNames" />

        <TextView
            android:id="@+id/sensor1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectPortOne"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/sensor1Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sensorNames" />

        <TextView
            android:id="@+id/sensor2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectPortTwo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/sensor2Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sensorNames" />

        <TextView
            android:id="@+id/sensor3Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectPortThird"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/sensor3Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sensorNames" />

        <TextView
            android:id="@+id/sensor4Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectPortFourth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/sensor4Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sensorNames" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/saveButtonText" />
    </LinearLayout>

</ScrollView>